[gd_scene load_steps=5 format=3 uid="uid://df6mvfutgs6a8"]

[ext_resource type="Script" uid="uid://dfuwv6ne0yab3" path="res://scripts/VisibleNPC.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cyxibrim848bh" path="res://assets/characters/ashnpc.png" id="2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_Body"]
size = Vector2(29.5, 47.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_Interaction"]
size = Vector2(59, 48)

[node name="NPCAsh" type="CharacterBody2D"]
script = ExtResource("1")
npc_name = "Ash"
dialogue = "Just Submit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.75, -23.25)
shape = SubResource("RectangleShape2D_Body")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2")
offset = Vector2(0, -16)
region_enabled = true
region_rect = Rect2(0, 0, 16, 32)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(13.5, -23)
shape = SubResource("RectangleShape2D_Interaction")

[node name="DialogueLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = -40.0
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="."]
offset_left = -25.0
offset_top = -45.0
offset_right = 25.0
offset_bottom = -25.0
horizontal_alignment = 1

[node name="InteractionPrompt" type="Label" parent="."]
visible = false
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
text = "Press 'E' to talk"
horizontal_alignment = 1
